<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_graduate"
            android:title="@string/menu_formations" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_skills"
            android:title="@string/menu_skills" />
        <item
            android:id="@+id/personal_qualities"
            android:icon="@drawable/ic_quality"
            android:title="@string/menu_personal_qualities" />
        <item
            android:id="@+id/xp"
            android:icon="@drawable/ic_suitcase"
            android:title="@string/menu_xp" />
        <item
            android:id="@+id/contacts"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/hobbies"
            android:icon="@drawable/ic_happiness"
            android:title="@string/menu_hobby" />
    </group>
</menu>